Added repo url in package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Neutrino preset for building Typescript web applications",
   "version": "1.0.0",
   "main": "src/index.js",
-  "repository": {},
+  "repository": "https://github.com/theodesp/neutrino-preset-typescript/",
   "license": "MIT",
   "keywords": [
     "neutrino",
