feat(typescript): loader
Simplify preset to only take care of adding typescript so it can be combined with other presets. (Such as web, react or node).
Created working examples of use with web or react.

--- a/package.json
+++ b/package.json
@@ -14,20 +14,10 @@
     "typings"
   ],
   "author": "Theo Despoudis <thdespou@hotmail.com>",
-  "peerDependencies": {
-    "neutrino": "^4.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^7.0.5",
-    "deepmerge": "^1.3.2",
-    "neutrino-preset-web": "^4.0.1",
-    "tslint": "^4.4.2",
-    "typescript": "^2.2.1",
-    "typings": "^2.1.0",
-    "webpack": "^2.2.1"
-  },
+  "peerDependencies": {},
+  "devDependencies": {},
   "bugs": "https://github.com/theodesp/neutrino-preset-typescript/issues",
   "dependencies": {
-    "tslib": "^1.6.0"
+    "awesome-typescript-loader": "^3.1.2"
   }
 }
